# LeetCodePractice

./: .gitignore  CMakeLists.txt  README.md  lol.sh  main.cpp  testing.cpp
app/: main.cpp
inc/: classSolution.hpp  dataStructures.hpp  libraries.hpp
src/: daily_Challenges.cpp  data_structures_creators.cpp  neetCode_Problems.cpp
